{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 65,
  "lineage": "dc25f89a-5263-02cb-e9f5-7e019bf4776f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/regions/us-central1/instanceGroups/my-igm",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-05-27T17:02:14.729-07:00",
            "deletion_policy": "DELETE",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "HhMFotR7_PI=",
            "generated_id": 1195361290671503593,
            "health_checks": [
              "projects/theowaf-class7-5charliebrown/global/healthChecks/load-balancer-health-check"
            ],
            "id": "projects/theowaf-class7-5charliebrown/global/backendServices/web-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "web-backend",
            "port_name": "http",
            "project": "theowaf-class7-5charliebrown",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/backendServices/web-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "web-backend",
            "project": "theowaf-class7-5charliebrown"
          },
          "dependencies": [
            "google_compute_health_check.backend",
            "google_compute_network.week_10",
            "google_compute_region_instance_group_manager.web",
            "google_compute_region_instance_template.week_10",
            "google_compute_subnetwork.week_10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-27T17:00:38.827-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/theowaf-class7-5charliebrown/global/firewalls/allow-health-check",
            "log_config": [],
            "name": "allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/networks/week-10",
            "params": [],
            "priority": 1000,
            "project": "theowaf-class7-5charliebrown",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/firewalls/allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "allow-health-check",
            "project": "theowaf-class7-5charliebrown"
          },
          "dependencies": [
            "google_compute_network.week_10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_10",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-27T17:00:39.215-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/theowaf-class7-5charliebrown/global/firewalls/allow-http-10",
            "log_config": [],
            "name": "allow-http-10",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/networks/week-10",
            "params": [],
            "priority": 1000,
            "project": "theowaf-class7-5charliebrown",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/firewalls/allow-http-10",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "allow-http-10",
            "project": "theowaf-class7-5charliebrown"
          },
          "dependencies": [
            "google_compute_network.week_10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_10",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-27T17:00:39.178-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/theowaf-class7-5charliebrown/global/firewalls/allow-ssh-10",
            "log_config": [],
            "name": "allow-ssh-10",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/networks/week-10",
            "params": [],
            "priority": 1000,
            "project": "theowaf-class7-5charliebrown",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/firewalls/allow-ssh-10",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "allow-ssh-10",
            "project": "theowaf-class7-5charliebrown"
          },
          "dependencies": [
            "google_compute_network.week_10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "8.233.170.35",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-05-27T17:00:17.602-07:00",
            "deletion_policy": "DELETE",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/theowaf-class7-5charliebrown/global/addresses/web-lb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "web-lb-ip",
            "prefix_length": 0,
            "project": "theowaf-class7-5charliebrown",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/addresses/web-lb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "web-lb-ip",
            "project": "theowaf-class7-5charliebrown"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "deletion_policy": "DELETE",
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 3588106134121756768,
            "id": "projects/theowaf-class7-5charliebrown/global/forwardingRules/web-forwarding-rule",
            "ip_address": "8.233.170.35",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "web-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "theowaf-class7-5charliebrown",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/forwardingRules/web-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/targetHttpProxies/web-url-map"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "web-forwarding-rule",
            "project": "theowaf-class7-5charliebrown"
          },
          "dependencies": [
            "google_compute_backend_service.web",
            "google_compute_global_address.lb_ip",
            "google_compute_health_check.backend",
            "google_compute_network.week_10",
            "google_compute_region_instance_group_manager.web",
            "google_compute_region_instance_template.week_10",
            "google_compute_subnetwork.week_10",
            "google_compute_target_http_proxy.web",
            "google_compute_url_map.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "week_10",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "deletion_policy": "DELETE",
            "enable_ula_internal_ipv6": false,
            "id": "projects/theowaf-class7-5charliebrown/global/networks/week-10",
            "mtu": 0,
            "name": "week-10",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "9214693719162895230",
            "numeric_id": "9214693719162895230",
            "project": "theowaf-class7-5charliebrown",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/networks/week-10"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "week-10",
            "project": "theowaf-class7-5charliebrown"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "week_10",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-05-27T17:00:39.011-07:00",
            "deletion_policy": "DELETE",
            "gateway_address": "10.10.0.1",
            "id": "projects/theowaf-class7-5charliebrown/regions/us-central1/subnetworks/week-10",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "week-10",
            "network": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/networks/week-10",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "theowaf-class7-5charliebrown",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/regions/us-central1/subnetworks/week-10",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7512528773086591816
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "week-10",
            "project": "theowaf-class7-5charliebrown",
            "region": "us-central1"
          },
          "dependencies": [
            "google_compute_network.week_10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-27T17:04:20.571-07:00",
            "deletion_policy": "DELETE",
            "fingerprint": "i8fG8WAUQIM=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/theowaf-class7-5charliebrown/global/targetHttpProxies/web-url-map",
            "name": "web-url-map",
            "project": "theowaf-class7-5charliebrown",
            "proxy_bind": false,
            "proxy_id": 3514396304819763307,
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/targetHttpProxies/web-url-map",
            "url_map": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/urlMaps/web-url-map"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "web-url-map",
            "project": "theowaf-class7-5charliebrown"
          },
          "dependencies": [
            "google_compute_backend_service.web",
            "google_compute_health_check.backend",
            "google_compute_network.week_10",
            "google_compute_region_instance_group_manager.web",
            "google_compute_region_instance_template.week_10",
            "google_compute_subnetwork.week_10",
            "google_compute_url_map.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-27T17:04:09.256-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/backendServices/web-backend",
            "default_url_redirect": [],
            "deletion_policy": "DELETE",
            "description": "",
            "fingerprint": "VFolRMKTbCo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/theowaf-class7-5charliebrown/global/urlMaps/web-url-map",
            "map_id": 6777093259475433623,
            "name": "web-url-map",
            "path_matcher": [],
            "project": "theowaf-class7-5charliebrown",
            "self_link": "https://www.googleapis.com/compute/v1/projects/theowaf-class7-5charliebrown/global/urlMaps/web-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "web-url-map",
            "project": "theowaf-class7-5charliebrown"
          },
          "dependencies": [
            "google_compute_backend_service.web",
            "google_compute_health_check.backend",
            "google_compute_network.week_10",
            "google_compute_region_instance_group_manager.web",
            "google_compute_region_instance_template.week_10",
            "google_compute_subnetwork.week_10"
          ]
        }
      ]
    }
  ]
}